[package]
name = "hssb-pricelist-generator"
version = "0.1.0"
authors = ["Sariya Melody <sariya@sariya.garden>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
glob = "0.3.0"
log = "0.4.14"
simple_logger = "1.11.0"
yaml-rust = "0.4.5"
